--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -66,9 +66,9 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li><a href="{% url 'left_sidebar_view' %}">Left Sidebar</a></li>
+						<li><a href="{% url 'right_sidebar_view' %}right-sidebar.html">Right Sidebar</a></li>
+						<li><a href="{% url 'no_sidebar_view' %}">No Sidebar</a></li>
 					</ul>
 				</nav>
 
