--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -39,7 +39,7 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
+							<h1><a href="{% url 'index' %}" id="logo">TXT</a></h1>
 							<p>A responsive site template by HTML5 UP</p>
 						</div>
 					</div>
@@ -48,7 +48,7 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
+						<li class="current"><a href="{% url 'index' %}">Home</a></li>
 						<li>
 							<a href="#">Dropdown</a>
 							<ul>
@@ -67,7 +67,7 @@
 							</ul>
 						</li>
 						<li><a href="{% url 'left_sidebar_view' %}">Left Sidebar</a></li>
-						<li><a href="{% url 'right_sidebar_view' %}right-sidebar.html">Right Sidebar</a></li>
+						<li><a href="{% url 'right_sidebar_view' %}">Right Sidebar</a></li>
 						<li><a href="{% url 'no_sidebar_view' %}">No Sidebar</a></li>
 					</ul>
 				</nav>
