--- a/mysite/polls/templates/right-sidebar.html
+++ b/mysite/polls/templates/right-sidebar.html
@@ -42,7 +42,7 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="{% url 'index' %}">Home</a></li>
 						<li>
 							<a href="#">Dropdown</a>
 							<ul>
@@ -60,9 +60,9 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li class="current"><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li><a href="{% url 'left_sidebar_view' %}">Left Sidebar</a></li>
+						<li class="current"><a href="{% url 'right_sidebar_view' %}">Right Sidebar</a></li>
+						<li><a href="{% url 'no_sidebar_view' %}">No Sidebar</a></li>
 					</ul>
 				</nav>
 
