--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -22,17 +22,8 @@
 		<title>TXT by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
-			<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -117,7 +108,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+															<a href="#" class="image featured"><img src="{% static 'images/pic01.jpg' %}" alt="" /></a>
 															<h3><a href="#">A Subheading</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
@@ -130,7 +121,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+															<a href="#" class="image featured"><img src="{% static 'images/pic02.jpg' %}" alt="" /></a>
 															<h3><a href="#">Another Subheading</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
@@ -143,7 +134,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<a href="#" class="image featured"><img src="{% static 'images/pic03.jpg' %}" alt="" /></a>
 															<h3><a href="#">And Another</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
@@ -156,7 +147,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+															<a href="#" class="image featured"><img src="{% static 'images/pic04.jpg' %}" alt="" /></a>
 															<h3><a href="#">And One More</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
@@ -196,7 +187,7 @@
 																		<li class="icon fa-comments"><a href="#">8</a></li>
 																	</ul>
 																</header>
-																<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+																<a href="#" class="image featured"><img src="{% static 'images/pic05.jpg' %}" alt="" /></a>
 																<p>
 																	Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in lectus. Praesent
 																	semper mod quis eget mi. Etiam sed ante risus aliquam erat et volutpat. Praesent a
@@ -321,14 +312,6 @@
 
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
