Reduce useless tab

--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -40,26 +40,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="{% url 'index' %}">Home</a></li>
-						<li>
-							<a href="#">Dropdown</a>
-							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
-							</ul>
-						</li>
-						<li><a href="{% url 'left_sidebar_view' %}">Left Sidebar</a></li>
-						<li><a href="{% url 'right_sidebar_view' %}">Right Sidebar</a></li>
-						<li><a href="{% url 'no_sidebar_view' %}">No Sidebar</a></li>
+						<li><a href="{% url 'no_sidebar_view' %}">VISUALIZATION</a></li>
 					</ul>
 				</nav>
 
@@ -80,12 +61,6 @@
 
 								<!-- Highlight -->
 									<section class="box highlight">
-										<ul class="special">
-											<li><a href="#" class="icon solid fa-search"><span class="label">Magnifier</span></a></li>
-											<li><a href="#" class="icon solid fa-tablet-alt"><span class="label">Tablet</span></a></li>
-											<li><a href="#" class="icon solid fa-flask"><span class="label">Flask</span></a></li>
-											<li><a href="#" class="icon solid fa-cog"><span class="label">Cog?</span></a></li>
-										</ul>
 										<header>
 											<h2>A random assortment of icons in circles</h2>
 											<p>And some text that attempts to explain their significance</p>
