--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -30,8 +30,8 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="{% url 'index' %}" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<h1><a href="{% url 'index' %}" id="logo">서울시</a></h1>
+							<p>아파트 전세를 예측하고 다양한 정보를 확인해 보세요.</p>
 						</div>
 					</div>
 				</header>
@@ -76,7 +76,7 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
+										<h2 class="major"><span>아파트 전세 예측하기</span></h2>
 										<div>
 											<h1>Django 사용자 입력받기</h1>
 											<hr>
@@ -174,17 +174,8 @@
 											<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
 										</ul>
 									</section>
-
 							</div>
-						</div>
-
-						<!-- Copyright -->
-							<div id="copyright">
-								<ul class="menu">
-									<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								</ul>
-							</div>
-
+						</div>						
 					</div>
 				</footer>
 
