Complete ML model's input and output

--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -96,28 +96,16 @@
 													<input type="text" name="trans_floor" id="trans_floor">
 												</div>
 												<div>
-													<label for="com_year">완공년도</label>
-													<input type="text" name="com_year" id="com_year">
+													<label for="apt_age">연식</label>
+													<input type="text" name="apt_age" id="apt_age">
 												</div>
 												<div>
 													<label for="interest">금리</label>
 													<input type="text" name="interest" id="interest">
 												</div>
 												<div>
-													<label for="household">세대수</label>
-													<input type="text" name="household" id="household">
-												</div>
-												<div>
 													<label for="top_floor">최고층</label>
 													<input type="text" name="top_floor" id="top_floor">
-												</div>
-												<div>
-													<label for="subway_dist">지하철역까지 거리</label>
-													<input type="text" name="subway_dist" id="subway_dist">
-												</div>
-												<div>
-													<label for="subway_cnt">근처 지하철역 개수</label>
-													<input type="text" name="subway_cnt" id="subway_cnt">
 												</div>
 												<div>
 													<label for="bus_cnt">근처 버스정거장 개수</label>
@@ -132,8 +120,22 @@
 													<input type="text" name="school" id="school">
 												</div>
 												<div>
-													<label for="hospital">종합병원 개수</label>
-													<input type="text" name="hospital" id="hospital">
+													<label for="household">세대수</label>
+													<input type="text" name="household" id="household">
+												</div>
+												
+												<div>
+													<label for="gangnam_3gu">강남 3구 (0 or 1)</label>
+													<input type="text" name="gangnam_3gu" id="gangnam_3gu">
+												</div>
+												<div>
+													<label for="ent_type_stair">계단식 아파트 (0 or 1)</label>
+													<input type="text" name="ent_type_stair" id="ent_type_stair">
+												</div>
+
+												<div>
+													<label for="ent_type_corridor">복도식 아파트 (0 or 1)</label>
+													<input type="text" name="ent_type_corridor" id="ent_type_corridor">
 												</div>
 
 												<br>
