index, no-sidebar, kbland data

--- a/mysite/polls/templates/no-sidebar.html
+++ b/mysite/polls/templates/no-sidebar.html
@@ -86,8 +86,8 @@
                                     </p>
                                  </section>
 
-								 <section>
-                                    <span class="image featured"><img src="{% static 'images/seoul1.png' %}" alt="" /></span>
+                                 <section>
+                                    <span class="image featured"><img src="{% static 'images/seoul2.png' %}" alt="" /></span>
                                  </section>
 
                                  <section>
@@ -102,6 +102,11 @@
                                        Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
                                        Phasellus sed nisl vitae.
                                     </p>
+
+                                    <section>
+                                       <span class="image featured"><img src="{% static 'images/seoul2.png' %}" alt="" /></span>
+                                    </section>
+
                                     <p>
                                        Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
                                        fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
@@ -137,7 +142,7 @@
 
                                        <!-- Feature -->
                                           <section class="box feature">
-                                             <a href="#" class="image featured"><img src="{% static 'images/pic01.jpg' %}" alt="" /></a>
+                                             <a href="#" class="image featured"><img src="{% static 'images/seoul2.png' %}" alt="" /></a>
                                              <h3><a href="#">Another Subheading</a></h3>
                                              <p>
                                                 Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
@@ -175,7 +180,7 @@
                                     <div class="col-12">
                                        <ul class="actions">
                                           <li><a href="{% url 'index' %}" class="button large">HoME</a></li>
-                                          <li><a href="https://kosis.kr/statHtml/statHtml.do?orgId=408&tblId=DT_KAB_11672_S25" class="button large" class="button alt large">Go to KOSIS</a></li>
+                                          <li><a href="https://data.kbland.kr/weathermap" class="button large" class="button alt large">Go to KBland</a></li>
                                        </ul>
                                     </div>
                                  </div>
@@ -197,10 +202,10 @@
                            <section>
                               <h2 class="major"><span>What's this about?</span></h2>
                               <p>
-								We are the <strong>nzmrhj team!</strong> We have created a website that uses machine learning to predict jeonse prices in relation to jeonse, 
-								which is currently of great interest in South Korea. Using ML voting techniques, 
-								users simply enter information related to charter and provide predicted results. 
-								I hope these techniques will be helpful to a variety of people :)
+                        We are the <strong>nzmrhj team!</strong> We have created a website that uses machine learning to predict jeonse prices in relation to jeonse, 
+                        which is currently of great interest in South Korea. Using ML voting techniques, 
+                        users simply enter information related to jeonse and provide predicted results. 
+                        I hope these techniques will be helpful to a variety of people :)
                               </p>
                            </section>
 
