--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -47,14 +47,15 @@
 			<!-- Banner -->
 				<section id="banner" style="padding: 0;">
 					<div class="content">
-						<h2>Welcome to TXT by HTML5 UP</h2>
-						<p>A free responsive site template built on HTML5, CSS3, and some other stuff</p>
+						<h2>아파트 전세 예측</h2>
+						<p>예측하기 버튼을 눌러서 전세와 관련된 정보를 입력해 주세요.
+						</p>
 						{% if messages %}
 						{% for message in messages %}
 							<h2>{{ message }}</h2>
 						{% endfor %}
 					{% endif %}
-						<a href="#main" class="button scrolly">Alright let's go</a>
+						<a href="#main" class="button scrolly">예측하기</a>
 					</div>
 				</section>
 
@@ -66,14 +67,7 @@
 
 								<!-- Highlight -->
 									<section class="box highlight">
-										<header>
-											<h2>A random assortment of icons in circles</h2>
-											<p>And some text that attempts to explain their significance</p>
-										</header>
-										<p>
-											Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget mi. Etiam eu<br />
-											ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus amet pulvinar. Nam nec turpis consequat.
-										</p>
+										<a href="#" class="image featured"><img src="{% static 'images/apt.png' %}" alt="" /></a>
 									</section>
 
 							</div>
@@ -83,7 +77,7 @@
 									<section class="box features">
 										<h2 class="major"><span>아파트 전세 예측하기</span></h2>
 										<div>
-											<h1>Django 사용자 입력받기</h1>
+											<h1>전세 관련 정보 입력</h1>
 											<hr>
 											<form action="{% url 'createform' %}" method="POST">
 												{% csrf_token %}
@@ -162,11 +156,10 @@
 									<section>
 										<h2 class="major"><span>What's this about?</span></h2>
 										<p>
-											This is <strong>TXT</strong>, yet another free responsive site template designed by
-											<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>. It's released under the
-											<a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for
-											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
-											That's basically it :)
+											We are the <strong>nzmrhj team!</strong> We have created a website that uses machine learning to predict jeonse prices in relation to jeonse, 
+											which is currently of great interest in South Korea. Using ML voting techniques, 
+											users simply enter information related to jeonse and provide predicted results. 
+											I hope these techniques will be helpful to a variety of people :)
 										</p>
 									</section>
 
