--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -170,7 +170,7 @@
 										<ul class="contact">
 											<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
 											<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-											<li><a class="icon brands fa-instagram" href="#"><span class="label">Instagram</span></a></li>
+											<li><a class="icon brands fa-instagram" href="https://www.instagram.com/molit.go.kr?igsh=NTc4MTIwNjQ2YQ=="><span class="label">Instagram</span></a></li>
 											<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
 											<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
 										</ul>
