--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -19,7 +19,7 @@
 <script src="{% static 'js/main.js' %}"></script>
 <html>
 	<head>
-		<title>TXT by HTML5 UP</title>
+		<title>NZMRHJ 서울시 내집마련 프로젝트</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	</head>
