--- a/mysite/polls/templates/no-sidebar.html
+++ b/mysite/polls/templates/no-sidebar.html
@@ -21,7 +21,7 @@
 
 <html>
    <head>
-      <title>No Sidebar - TXT by HTML5 UP</title>
+      <title>VISUALIZATION</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
    </head>
@@ -72,7 +72,7 @@
                                     <h3>서울시 지도를 이용한 아파트 전세가격 밀집도</h3>
                                     <p>
                                        아파트 전세 가격 데이터를 사용하여 서울시 지도 위의 밀집도를 확인했습니다.
-                                       이를 토대로 오른쪽 위에 위치한 범례에서는 낮은 전세 가격을 초록색으로, 높은 전세 가격을 빨간색으로 표시하고 있습니다. 
+                                       이 그래프에서는 높은 전세 가격을 주황색으로, 낮은 전세 가격을 초록색으로 표시하고 있습니다. 
                                        이러한 색상 척도를 통해 서울시의 아파트 전세 가격의 지역적 분포와 밀도를 시각적으로 확인할 수 있고, 이후 전세 시장에서 동향을 
                                        파악하고 부동산에 대한 이해를 도울 것 입니다.
                                     </p>
@@ -82,11 +82,11 @@
                                  </section>
 
                                  <section>
-                                    <h3>실제값과 예측값 그 사이 어딘가....</h3>
+                                    <h3>실제값과 예측값</h3>
                                     <p>
                                        모델의 설명력을 나타내기 위한 지표를 조금 더 시각적으로 표현하기 위해서 실제값과 예측값을 비교할 수 있는
-                                       회귀선을 나타냈습니다. 전세 가격 데이터라 어느정도 벗어나는 값들이 있지만 대부분 회귀선 주변에 분포하고 있는 모습을
-                                       확인할 수 있었습니다.
+                                       회귀선을 나타냈습니다. 전세 가격 데이터라 어느 정도 벗어나는 값들이 있지만 대부분 회귀선 주변에 분포하고 있는 모습을
+                                       확인할 수 있습니다.
                                     </p>
 
                                     <section>
@@ -94,18 +94,18 @@
                                     </section>
                                     <h4>서울시 구별 아파트 전세값 비교</h4>   
                                     <p>
-                                       서울시 구별로 아파트 전세 가격의 최대, 평균, 최소를 나타냈습니다. 각 구별로 모습을 쉽게 확인할 수 있었고 강남구, 마포구, 서초구, 성동구,
-                                       송파구등 높은 가격을 형성하는 구가 있습니다.
+                                       서울시 구별로 아파트 전세 가격의 최대, 평균, 최소를 나타냈습니다. 구별 모습을 쉽게 확인할 수 있고 강남구, 서초구, 송파구,
+                                        용산구 등 다른 구에 비해 평균 전세 가격이 높은 구가 있습니다.
                                    </p>
                                  </section>
 
                                  <section>
                                     <span class="image featured"><img src="{% static 'images/price.png' %}" alt="" /></span>
                                  </section>
-                                 <h4>서울시 전세 가격 평균과 계약일</h4>   
+                                 <h4>계약일별 서울시 전세 가격 평균</h4>   
                                  <p>
-                                    계약일에 따른 서울시 전세 가격 아파트 평균의 변화
-                                </p>
+                                    계약일(기준: 월)에 따른 서울시 아파트 평균 전세 가격의 변화를 그래프로 나타내었습니다.
+                                 </p>
                               </section>
 
                               </article>
