--- a/mysite/polls/templates/no-sidebar.html
+++ b/mysite/polls/templates/no-sidebar.html
@@ -21,7 +21,7 @@
 
 <html>
    <head>
-      <title>VISUALIZATION</title>
+      <title>NZMRHJ 서울시 내집마련 프로젝트</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
    </head>
