--- a/mysite/polls/templates/no-sidebar.html
+++ b/mysite/polls/templates/no-sidebar.html
@@ -116,7 +116,7 @@
 
                         <!-- Features -->
                            <section class="box features">
-                              <h2 class="major"><span>A Major Heading</span></h2>
+                              <h2 class="major"><span>summary</span></h2>
                               <div>
                                  <div class="row">
                                     <div class="col-3 col-6-medium col-12-small">
